Removed margin top - large spacing between form and button fixed

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -50,7 +50,6 @@
   border: none;
   cursor: pointer;
   transition: opacity 0.5s ease;
-  margin-top: 32px;
   margin-bottom: 32px;
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
